// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CTALink Snapshots with a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--blue"
>
  <!---->
</div>
`;

exports[`CTALink Snapshots without a color passed in matches snapshot 1`] = `
<div
  class="CTA CTA--brown"
>
  <!---->
</div>
`;
